key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/generics-diamond/GenDiamond.java
public class GenDiamond {
    static class Box<T> { T v; }
    Box<String> b = new Box<>();
}
